<resources>
    <string name="app_name">Snippets-Android-Kotlin</string>
    <!--    Permissoes ###########################-->

    <string name="returned_from_app_settings_to_activity">
        Returned from app settings to MainActivity with the following permissions:
        \n
        \nCamera: %s
        \nLocation &amp; Contacts: %s
        \nSMS: %s
        \nStorage: %s
    </string>

    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="permission_camera_text">Camera</string>
    <string name="permission_camera_rationale_message">This app needs access to your camera so you can take pictures.</string>
    <string name="permission_sms_text">SMS</string>
    <string name="permission_sms_rationale_message">This app needs access to your sms to read all your great messages.</string>
    <string name="permission_storage_text">Storage</string>
    <string name="permission_storage_rationale_message">This app needs access to your storage to save your modified picture on gallery.</string>
    <string name="permission_location_and_contacts_text">Location and Contacts</string>
    <string name="permission_location_and_contacts_rationale_message">This app needs access to your location and contacts to know where and who you are.</string>

    <!-- Logs -->
    <string name="log_permissions_granted">onPermissionsGranted:%d:%d</string>
    <string name="log_permissions_denied">onPermissionsDenied::%d:%d</string>
    <string name="log_permission_rationale_accepted">onPermissionRationaleAccepted:%d"</string>
    <string name="log_permission_rationale_denied">onPermissionRationaleDenied:%d"</string>
    <!--####### BARCODE-->
    <string name="fullscreen_mode">Colocar em modo fullscreen</string>
    <string name="turn_on_flash">Ligar flash</string>
    <string name="lock_code_reader">Travar leitura de barra de código</string>
    <string name="info">Informação</string>
    <string name="info_description">Posicione a câmera corretamente sobre o código para que a leitura seja realizada.</string>
    <string name="last_content_read">Conteúdo da última leitura:</string>
    <string name="nothing_read">Nada lido ainda</string>
    <string name="barcode_format">Tipo barra de código: </string>
    <string name="clear_content_read">Limpar área de conteúdo lido</string>
    <string name="open_url">ABRIR URL</string>
    <string name="close_fullscreen_mode">Sair de modo fullscreen</string>
    <string name="open_email">ABRIR EMAIL</string>
    <string name="open_call">LIGAR</string>
    <string name="request_permission_description">A permissão de uso de camera é necessária para que o aplicativo funcione.</string>
    <string name="request_permission_button_ok">Ok</string>
    <string name="request_permission_button_cancel">Cancelar</string>
    <string name="unrecognized_code">Código não reconhecido.</string>

</resources>