<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021. Julio Cezar Riffel<julioriffel@gmail.com>
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LerCodigoBarrasActivity">


    <me.dm7.barcodescanner.zxing.ZXingScannerView
        android:id="@+id/z_xing_scanner"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="top|end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/ib_flashlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:contentDescription="@string/turn_on_flash"
        android:onClick="flashLight"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_flash_on_baseline_24"
        app:layout_constraintBottom_toBottomOf="@id/z_xing_scanner"
        app:layout_constraintEnd_toEndOf="@id/z_xing_scanner"
        app:tint="@android:color/white" />


    <ImageView
        android:id="@+id/image1"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:contentDescription="@string/info"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_outline_info_24"
        app:layout_constraintBottom_toBottomOf="@id/tv_msg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/z_xing_scanner"
        app:tint="@color/grey_700" />

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_weight="1"
        android:text="@string/info_description"
        android:textColor="@color/grey_700"

        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image1"
        app:layout_constraintTop_toBottomOf="@id/z_xing_scanner" />


    <TextView
        android:id="@+id/tv_label"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/last_content_read"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_msg" />


    <TextView
        android:id="@+id/tv_bar_code_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/barcode_format"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ib_clear"
        app:layout_constraintEnd_toEndOf="@id/ib_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label" />


    <ImageButton
        android:id="@+id/ib_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/red_700"
        android:contentDescription="@string/clear_content_read"
        android:onClick="clearContent"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_delete_baseline_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label"

        app:tint="@android:color/white" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/nothing_read"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ib_clear" />

    <TextView
        android:id="@+id/tv_Resumo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:padding="12dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_content" />


</androidx.constraintlayout.widget.ConstraintLayout>